# pyaacrl

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  README.md  main.py  makefile  pyproject.toml  setup.py
pyaacrl/: CMakeLists.txt  __init__.py  lib.pxd  pyaacrl.pyx
pyaacrl/cython_src/: CMakeLists.txt  lib.pxd  pyaacrl_cy.pyx
songs/: README.md
yaacrl/: yaacrl.pyx
